Add api-gateway routing config

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -9,8 +9,12 @@ spring:
     gateway:
       discovery:
         locator:
-          enabled: true
-          lower-case-service-id: true
+          enabled: false
+      routes:
+        - id: order-service
+          uri: lb://ORDER-SERVICE
+          predicates:
+            - Path=/orders/**
 
 eureka:
   client:
