Add order validation and error handling

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -15,6 +15,11 @@ spring:
           uri: lb://ORDER-SERVICE
           predicates:
             - Path=/orders/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: orderServiceCB
+                fallbackUri: forward:/orderFallback
 
 eureka:
   client:
