--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -26,3 +26,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
