--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -31,3 +31,10 @@ management:
     web:
       exposure:
         include: health,info,metrics
+resilience4j:
+  circuitbreaker:
+    instances:
+      order-service:
+        failure-rate-threshold: 50
+        sliding-window-size: 10
+        wait-duration-in-open-state: 10s
