--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -17,10 +17,20 @@ spring:
           predicates:
             - Path=/orders/**
           filters:
+            - name: RequestRateLimiter
+              args:
+                  redis-rate-limiter.replenishRate: 10
+                  redis-rate-limiter.burstCapacity: 20
+            - name: Retry
+              args:
+                retries: 2
+                statuses: BAD_GATEWAY, GATEWAY_TIMEOUT, INTERNAL_SERVER_ERROR
+                methods: GET, POST
+
             - name: CircuitBreaker
               args:
                 name: orderServiceCB
-                fallbackUri: forward:/fallback/orders    #fallbackUri: forward:/orderFallback
+                fallbackUri: forward:/fallback/orders
 eureka:
   client:
     service-url:
