--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,5 +1,6 @@
 server:
   port: 8080
+
 spring:
   application:
     name: api-gateway
@@ -11,43 +12,42 @@ spring:
           discovery:
             locator:
               enabled: true
-          routes:     # ✅ CORRECT PLACE
-            - id: order-service
-              uri: lb://ORDER-SERVICE
-              predicates:
-                - Path=/orders/**
-#              filters:
-#                - name: RequestRateLimiter
-#                  args:
-#                    redis-rate-limiter.replenishRate: 10
-#                    redis-rate-limiter.burstCapacity: 20
 
-                - name: Retry
-                  args:
-                    retries: 2
-                    statuses: BAD_GATEWAY, GATEWAY_TIMEOUT, INTERNAL_SERVER_ERROR
-                    methods: GET, POST
+      routes:
+        - id: order-service
+          uri: lb://ORDER-SERVICE
 
-                - name: CircuitBreaker
-                  args:
-                    name: orderServiceCB
-                    fallbackUri: forward:/fallback/orders
+          predicates:
+            - Path=/orders/**
+
+          filters:
+            - name: Retry
+              args:
+                retries: 2
+                statuses:
+                  - BAD_GATEWAY
+                  - GATEWAY_TIMEOUT
+                  - INTERNAL_SERVER_ERROR
+                methods:
+                  - GET
+                  - POST
+
+            - name: CircuitBreaker
+              args:
+                name: orderServiceCB
+                fallbackUri: forward:/fallback/orders
+
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
 management:
   endpoints:
     web:
       exposure:
         include: health,info,metrics
-#resilience4j:
-#  circuitbreaker:
-#    instances:
-#      order-service:
-#        failure-rate-threshold: 50
-#        sliding-window-size: 10
-#        wait-duration-in-open-state: 10s
+
 resilience4j:
   circuitbreaker:
     instances:
@@ -58,11 +58,9 @@ resilience4j:
         slidingWindowSize: 10
 
         minimumNumberOfCalls: 5
-
         failureRateThreshold: 50
 
         waitDurationInOpenState: 10s
-
         permittedNumberOfCallsInHalfOpenState: 3
 
         automaticTransitionFromOpenToHalfOpenEnabled: true
