--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -46,7 +46,12 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics
+        include:
+          - health
+          - info
+          - metrics
+          - circuitbreakers
+          - circuitbreakerevents
 
 resilience4j:
   circuitbreaker:
